SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver_Group__c/CPQ_Playbook_Approver_Group__c.object-meta.xml
<CustomObject>
    <description>Object to house 1 or more CPQ Playbook Approver records</description>
    <label>CPQ Playbook Approver Group</label>
    <nameField>
        <label>Approver Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Approver Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>