SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver_Group__c/fields/Approval_Order__c.field-meta.xml
<CustomField>
    <fullName>Approval_Order__c</fullName>
    <description>Order in which group should be executed in its approval. Lower numbers execute first</description>
    <inlineHelpText>Order in which group should be executed in its approval. Lower numbers execute first</inlineHelpText>
    <label>Approval Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>