SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver_Group__c/fields/Approvers_Required__c.field-meta.xml
<CustomField>
    <fullName>Approvers_Required__c</fullName>
    <description>Number of child approver records needed. Cannot be greater than # of children. Cannot be less than 1</description>
    <inlineHelpText>Number of associated approver records needed for group to be approved. Cannot be greater than # of associated approvers. Cannot be less than 1</inlineHelpText>
    <label># of Approvers Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>