SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver_Group__c/fields/CPQ_Playbook_Approval__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Approval__c</fullName>
    <description>CPQ Playbook Approval in which the Approver Group is enforced</description>
    <inlineHelpText>Playbook Approval in which the group is enforced</inlineHelpText>
    <label>CPQ Playbook Approval</label>
    <referenceTo>CPQ_Playbook_Approval__c</referenceTo>
    <relationshipLabel>CPQ Playbook Approver Groups</relationshipLabel>
    <relationshipName>CPQ_Playbook_Approver_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>