SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver_Group__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if approver group is active and should be enforced in approval</description>
    <inlineHelpText>Determines if approver group is active and should be enforced in approval</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>